<resources>
    <string name="app_name">宝贝租</string>
    <string name="action_settings">Settings</string>
    <string name="btn_agreement">我同意条款</string>
    <string name="btn_order">发布</string>
    <string name="image">image</string>
    <string name="yuan">元</string>
    <string name="inviteMainActivity_item1">订单:</string>
    <string name="inviteMainActivity_item2">愿付酬金:</string>
    <string name="inviteMainActivity_item3">邀约时间:</string>
    <string name="inviteMainActivity_item4">邀约地点:</string>
    <string name="inviteMainActivity_item5">创建时间:</string>
    <string name="fuzhi">福利</string>
    <string name="skill_tips">订单:</string>
    <string name="skill_content">逛街、压马路</string>
    <string name="test_money">200.0</string>
    <string name="test_time">2016-6-14 23:14:52</string>
    <string name="test_address">福建省福州市马尾区名郡11号楼#301</string>
    <string name="MoreTitle_ChangePassword">修改密码</string>
    <string name="MoreTitle_Blacklist">黑名单</string>
    <string name="MoreTitle_Setting">消息通知设置</string>
    <string name="MoreTitle_Setting2">消息免打扰设置</string>
    <string name="MoreTitle_Feedback">意见反馈</string>
    <string name="MoreTitle_Score">给快约评分</string>
    <string name="MoreTitle_Problem">常见问题</string>
    <string name="MoreTitle_DetectionUpdates">检测更新</string>
    <string name="MoreTitle_ClearTheCache">清除缓存</string>
    <string name="More_ExitTheAccount">注销当前帐号</string>
    <string name="More_Msg">消息通知</string>
    <string name="inviteMainActivity_item6">此单来自好友分享，系统自动分他15%酬金</string>
    <string name="inviteMainActivity_item7">来自商户技能</string>
    <string name="username_hit">用户名</string>
    <string name="password_hit">用户密码</string>
    <string name="change_user_btn">切换账号</string>
    <string name="register">注册</string>
    <string name="registering_hint">注册中</string>
    <string name="register_failed_toast">注册失败</string>
    <string name="login">登录</string>
    <string name="login_hint">登录中</string>
    <string name="user_not_exist_toast">该用户不存在</string>
    <string name="jmui_user_already_exist_toast">该用户已存在</string>
    <string name="user_add_self_toast">不能添加自己为好友</string>
    <string name="register_username_hit">用户名(数字、字母、_ 组成)</string>
    <string name="username_not_null_toast">用户名不能为空</string>
    <string name="nickname_not_null_toast">昵称不能为空</string>
    <string name="password_not_null_toast">密码不能为空</string>
    <string name="password_length_illegal">密码长度要在4-128个字节之间</string>
    <string name="password_same_to_previous">不能和原密码相同，请输入新密码</string>
    <string name="nickname_hit">昵称</string>
    <string name="jmui_take_new_photo">拍摄照片</string>
    <string name="jmui_take_photo">拍照</string>
    <string name="jmui_pick_picture_from_local">选择图片</string>
    <string name="get_photo">　使用照片</string>
    <string name="updating_avatar_hint">正在上传头像</string>
    <string name="avatar_modify_succeed_toast">头像修改成功</string>
    <string name="later_setting">稍后设置</string>
    <string name="saving_hint">正在保存</string>
    <string name="nickname_save_failed">昵称保存失败</string>
    <string name="network_disconnected_hint">当前网络不可用, 请检查你的网络设置</string>
    <string name="actionbar_msg">聊天</string>
    <string name="cross_app_key">跨应用</string>
    <string name="actionbar_conversation">会话</string>
    <string name="actionbar_contact">通讯录</string>
    <string name="actionbar_me">我</string>
    <string name="search_friend_hit">邮箱/用户名/ID</string>
    <string name="search">搜索...</string>
    <string name="take_monent">稍等片刻</string>
    <string name="add">添加</string>
    <string name="add_friend">添加朋友</string>
    <string name="fetch_user_info_failed">用户信息获取失败</string>
    <string name="create_group">创建群聊</string>
    <string name="creating_hint">创建中</string>
    <string name="create_user">我们正在建立您的个人档案</string>
    <string name="search_friend_title_bar">搜索结果</string>
    <string name="friend_request_hit">请你输入你的添加好友请求</string>
    <string name="friend_request_input_hit">我是…</string>
    <string name="send_request">发送请求</string>
    <string name="jmui_copy">复制</string>
    <string name="jmui_forward_msg">转发</string>
    <string name="jmui_copy_toast">已复制</string>
    <string name="jmui_delete">删除</string>
    <string name="jmui_delete_conv">删除该聊天</string>
    <string name="jmui_create_file_failed">创建文件失败</string>
    <string name="jmui_record_voice_hint">按住 说话</string>
    <string name="jmui_cancel_record_voice_hint">松开手指，取消发送</string>
    <string name="jmui_send_voice_hint">松开 结束</string>
    <string name="jmui_move_to_cancel_hint">手指上滑，取消发送</string>
    <string name="jmui_rest_record_time_hint">还可以说%s秒</string>
    <string name="combine_title">(%s)</string>
    <string name="jmui_file_not_found_toast">文件丢失, 尝试重新获取</string>
    <string name="not_select_photo">你没有选择照片，请重新选择</string>
    <string name="picture_not_found">没有找到您想要的图片</string>
    <string name="jmui_loading">正在加载</string>
    <string name="load_failed_toast">加载失败</string>
    <string name="info_null">未填写</string>
    <string name="change_avatar">修改头像</string>
    <string name="operation">操作</string>
    <string name="origin_picture">原图</string>
    <string name="choose">选择</string>
    <string name="jmui_send">发送</string>
    <string name="send_message">发消息</string>
    <string name="sending_hint">正在发送</string>
    <string name="jmui_resend_message_hint">重发该消息？</string>
    <string name="jmui_resend_commit">重发</string>
    <string name="jmui_cancel">取消</string>
    <string name="picture_num_limit_toast">你最多只能同时发送9张图片</string>
    <string name="load_origin_image">查看原图</string>
    <string name="downloading_hint">正在下载</string>
    <string name="download_completed_toast">下载完成</string>
    <string name="choose_album_title">选择相册</string>
    <string name="friend_opt_change_name">修改备注</string>
    <string name="friend_opt_delete">删除好友</string>
    <string name="friend_opt_detail">详细资料</string>
    <string name="detail_info">个人资料</string>
    <string name="jmui_voice_length">10"</string>
    <string name="jmui_symbol_second">\"</string>
    <string name="jmui_time_too_short_toast">时间太短！</string>
    <string name="file_fetch_failed">文件获取失败</string>
    <string name="jmui_record_voice_permission_denied">请在应用的权限管理中将使用录音选项设置为允许，
        否则将无法使用录音功能</string>
    <string name="jmui_record_voice_permission_request">若要使用语音功能，请选择允许录音</string>
    <string name="jmui_voice_fetch_failed_toast">获取语音失败，请重试</string>
    <string name="jmui_illegal_state_toast">录音状态异常,请稍后重试</string>
    <string name="draft">[草稿]</string>
    <string name="jmui_picture">图片</string>
    <string name="type_picture">[图片]</string>
    <string name="type_voice">[语音]</string>
    <string name="type_location">[位置]</string>
    <string name="jmui_video">视频</string>
    <string name="jmui_location">位置</string>
    <string name="jmui_business_card">名片</string>
    <string name="group_notification">[群成员变动]</string>
    <string name="type_custom">[自定义消息]</string>
    <string name="hundreds_of_unread_msgs">...</string>
    <string name="jmui_time_format_year_month_day">yyyy年-MM月-dd日</string>
    <string name="jmui_time_format_accuracy">yyyy-MM-dd HH:mm </string>
    <string name="jmui_time_format_hours">HH:mm</string>
    <string name="jmui_yesterday">昨天</string>
    <string name="jmui_before_dawn">凌晨</string>
    <string name="jmui_morning">早上</string>
    <string name="jmui_afternoon">下午</string>
    <string name="jmui_night">晚上</string>
    <string name="jmui_monday">周一</string>
    <string name="jmui_tuesday">周二</string>
    <string name="jmui_wednesday">周三</string>
    <string name="jmui_thursday">周四</string>
    <string name="jmui_friday">周五</string>
    <string name="jmui_saturday">周六</string>
    <string name="jmui_sunday">周日</string>
    <string name="year">年</string>
    <string name="jmui_month">月</string>
    <string name="jmui_day">日</string>
    <string name="second">秒</string>
    <string name="jmui_local_picture_not_found_toast">暂无外部存储，某些本地图片不可预览</string>
    <string name="jmui_sdcard_not_exist_toast">暂无外部存储</string>
    <string name="camera_not_prepared">摄像头尚未准备好</string>
    <string name="sdcard_not_prepare_toast">sdcard尚未准备好</string>
    <string name="select_friend_title">选择朋友</string>
    <string name="selected_num">(%s)</string>
    <string name="birthday">出生日期</string>
    <string name="sex">性别</string>
    <string name="area">地区</string>
    <string name="sign">个性签名</string>
    <string name="commit">确认</string>
    <string name="jmui_confirm">确定</string>
    <string name="finish">完成</string>
    <string name="upload_avatar_title">请选择上传头像方式</string>
    <string name="setting">设置</string>
    <string name="login_out">退出登录</string>
    <string name="about">关于</string>
    <string name="demo_version_name">demo版本号:%s</string>
    <string name="sdk_version">\nsdk版本号:</string>
    <string name="about_date">\n6月3日</string>
    <string name="add_to_friend">加为好友</string>
    <string name="setting_username_hit">昵称</string>
    <string name="setting_username_big_hit">更改名字</string>
    <string name="reset_nickname_hint">好名字可以让你的朋友更加容易记住你。</string>
    <string name="note_name">备注名</string>
    <string name="description">描述</string>
    <string name="setting_location_hit">地区</string>
    <string name="input_location_title">输入地区</string>
    <string name="input_area_error">请输入您所在的地区</string>
    <string name="setting_location_big_hit">修改地区</string>
    <string name="setting_signature_hit">个信签名</string>
    <string name="input_signature_toast">请输入您的个性签名</string>
    <string name="edit_signature_title">编辑个性签名</string>
    <string name="edit_signature_count">30</string>
    <string name="edit_friend_info_count">200</string>
    <string name="save">保存</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="unknown">未知</string>
    <string name="change_password">修改密码</string>
    <string name="jmui_change_pwd_tip">修改密码前请输入原密码</string>
    <string name="jmui_input_password_error_toast">输入密码错误，请重新输入</string>
    <string name="change_password_title">设置密码</string>
    <string name="change_old_password_hit">原密码</string>
    <string name="password">密码</string>
    <string name="hint_reset_password">请设置登录密码</string>
    <string name="hint_confirm_password">请再次输入</string>
    <string name="confirm_password">确认密码</string>
    <string name="change_password_hit">填写密码</string>
    <string name="change_password_re_hit">再次填写密码</string>
    <string name="password_not_match_toast">两次输入的密码不一致</string>
    <string name="password_change_success_toast">修改成功，请牢记新密码</string>
    <string name="set_do_not_disturb" >消息免打扰</string>
    <string name="set_do_not_disturb_success_hint">成功加入免打扰</string>
    <string name="remove_from_no_disturb_list_hint">已移除免打扰</string>
    <string name="add_to_blacklist">加入黑名单</string>
    <string name="add_to_blacklist_success_hint">成功加入黑名单</string>
    <string name="remove_from_blacklist_hint">已从黑名单移除</string>
    <string name="new_msg_remind_hit">新消息提醒</string>
    <string name="receive_new_msg_notification_hit">接收新消息通知</string>
    <string name="receive_new_msg_vibration_hit">震动</string>
    <string name="receive_new_msg_voice_hit">声音</string>
    <string name="background_msg_remind_time">后台消息免打扰时段</string>
    <string name="dnd_sub_hit">勿扰模式</string>
    <string name="all_day_remind_hit">全天提醒</string>
    <string name="close_all_day_remind">关闭全天提醒后，消息只在设定时间内提醒</string>
    <string name="disturb_description">开启后，在设定时间段内收到新消息将不会响铃或震动</string>
    <string name="agreement_title0">特别提示</string>
    <string name="agreement_content0">"北京快约科技有限公司（下称“快约科技”）在此特别提醒用户认真阅读、充分理解本《服务协议》（下称《协议》）--- 用户应认真阅读、充分理解本《协议》中各条款，包括免除或者限制快约科技责任的免责条款及对用户的权利限制条款。请您审慎阅读并选择接受或不接受本《协议》（未成年人应在法定监护人陪同下阅读）。除非您接受本《协议》所有条款，否则您无权登录或使用本协议所涉相关服务。您的登录、使用等行为将视为对本《协议》的接受，并同意接受本《协议》各项条款的约束。
本《协议》是您（下称“用户”）与快约科技之间关于使用“快约”服务所订立的协议。本《协议》描述快约科技与用户之间关于“快约”服务相关方面的权利义务。“用户”是指使用、浏览本服务的个人或组织。
本《协议》可由快约科技随时更新，更新后的协议条款一旦公布即代替原来的协议条款，恕不再另行通知，用户可在快约网站查阅最新版协议条款。在快约科技修改《协议》条款后，如果用户不接受修改后的条款，请立即停止使用快约科技提供的服务，用户继续使用快约科技提供的服务将被视为已接受了修改后的协议。"</string>
</resources>