<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:background="@color/activity_background">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10.0dip">

            <TextView
                style="@style/TextView_Agreement_title"
                android:text="@string/agreement_title0" />

            <TextView
                style="@style/TextView_Agreement_content"
                android:text="@string/agreement_content0" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_ok"
            style="@style/Button_Long_Text"
            android:layout_margin="10.0dip"
            android:text="@string/btn_agreement" />
    </LinearLayout>
</LinearLayout>